--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav class="nav-desktop">
             <div class="logo">
-                KAMAL BOHARA
+              <a href="index.html"></a>  KAMAL BOHARA
             </div>
             <div class="desktop-list">
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="experience.html">Experience</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                   <li><a href="about.html"><b>About</b></a></li>
+                    <li><a href="experience.html"><b>Experience</b></a></li>
+                    <li><a href="project.html"><b>Projects</b></a></li>
+                    <li><a href="contact.html"><b>Contact</b></a></li>
                 </ul>
             </div>
         </nav>
@@ -29,11 +29,19 @@
                 <img src="pg.jpg" alt="" srcset="">
             </div>
             <div class="myself">
-                <p style="color: red;">HI, I'm KAMAL BOHARA</p>
-                <p>WEB_DEVELOPER</p>
+                <b><p style="color: red;">HI, I'm KAMAL BOHARA</p>
+                <b><p>WEB_DEVELOPER</p></b>
                 <p>TECH-ENTHUSIAST</p>
+              <center><button><a href="about.html">About me</a></button></center>  
+
+                </b>
             </div>
         </section>
     </main>
+    <footer>
+        hello
+
+    </footer>
 </body>
+
 </html>
