--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-desktop">
             <div class="logo">
-              <a href="index.html"></a>  KAMAL BOHARA
+              <a href="index.html"> KAMAL BOHARA</a> 
             </div>
             <div class="desktop-list">
                 <ul>
