--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KAMAL-PORTFOLIO</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaquery.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KAMAL-PORTFOLIO</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="java.js" defer></script>
 </head>
 <body>
-    <header>
-        <nav class="nav-desktop">
-            <div class="logo">
-              <a href="index.html"> KAMAL BOHARA</a> 
-            </div>
-            <div class="desktop-list">
-                <ul>
-                   <li><a href="about.html"><b>About</b></a></li>
-                    <li><a href="experience.html"><b>Experience</b></a></li>
-                    <li><a href="project.html"><b>Projects</b></a></li>
-                    <li><a href="contact.html"><b>Contact</b></a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section id="intro">
-            <div class="photo">
-                <img src="pg.jpg" alt="" srcset="">
-            </div>
-            <div class="myself">
-                <b><p style="color: red;">HI, I'm KAMAL BOHARA</p>
-                <b><p>WEB_DEVELOPER</p></b>
-                <p>TECH-ENTHUSIAST</p>
-              <center><button><a href="about.html">About me</a></button></center>  
+ 
 
-                </b>
-            </div>
-        </section>
-    </main>
-    <footer>
-        hello
+  <header>
+    <nav class="nav-desktop">
+      <div class="logo">
+        <a href="index.html">KAMAL BOHARA</a>
+      </div>
+      <div class="desktop-list">
+        <ul>
+          <li><a href="about.html"><b>About</b></a></li>
+          <li><a href="experience.html"><b>Experience</b></a></li>
+          <li><a href="project.html"><b>Projects</b></a></li>
+          <li><a href="contact.html"><b>Contact</b></a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-    </footer>
+  <main>
+      <div class="intro">
+        <div class="photo">
+          <img src="kamal.jpeg" alt="">
+
+        </div>
+        <div class="self">
+          <h1>Hi, </h1>
+          <span>I'm Kamal Bohara</span>
+          <p>WEB-Developer</p>
+          <p>TECH-ENTHUSIAST</p>
+
+        </div>
+      </div>
+  </main>
+
+  <footer>
+    hello
+  </footer>
 </body>
-
 </html>
