--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KAMAL-PORTFOLIO</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
   <script src="java.js" defer></script>
 </head>
+
 <body>
- 
+
 
   <header>
     <nav class="nav-desktop">
@@ -17,8 +20,9 @@
       </div>
       <div class="desktop-list">
         <ul>
+            <li><a href="index.html"><b>Home</b></a></li>
           <li><a href="about.html"><b>About</b></a></li>
-          <li><a href="experience.html"><b>Experience</b></a></li>
+          <li><a href="experience.html"><b>Gallery</b></a></li>
           <li><a href="project.html"><b>Projects</b></a></li>
           <li><a href="contact.html"><b>Contact</b></a></li>
         </ul>
@@ -26,24 +30,55 @@
     </nav>
   </header>
 
-  <main>
-      <div class="intro">
-        <div class="photo">
-          <img src="kamal.jpeg" alt="">
-
-        </div>
-        <div class="self">
-          <h1>Hi, </h1>
-          <span>I'm Kamal Bohara</span>
-          <p>WEB-Developer</p>
-          <p>TECH-ENTHUSIAST</p>
-
-        </div>
+<main>
+  <section class="intro">
+    <div class="kamal">
+      <div class="kamalphoto">
+        <img src="pg.jpg" alt="">
       </div>
+      <div class="aboutkamal">
+          <p style="color: red;"><b>HI, I'm KAMAL BOHARA</b></p>
+        <marquee behavior="alternate" direction="left"><p style="color: blue;"><b>WEB_DEVELOPER</b></p></marquee>
+       <marquee behavior="alternate" direction="right"> <p><b>TECH-ENTHUSIAST</b></p></marquee>
+
+      </div>
+    </div>
+</section>
+<section class="language">
+  <div class="learned-lan">
+    <div class="lan-left">
+   left
+    </div>
+    <div class="lan-right">
+right 
+
+    </div>
+
+  </div>
+
+</section>
+<section class="next">
+
+</section>
   </main>
 
   <footer>
-    hello
+  
+       <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
+  <div style="margin-bottom: 10px;">
+    <a href="https://facebook.com" target="_blank" style="margin: 0 10px; color: #4267B2;">
+      <i class="fab fa-facebook fa-lg"></i>
+    </a>
+    <a href="https://github.com/Kamal857" target="_blank" style="margin: 0 10px; color: #333;">
+      <i class="fab fa-github fa-lg"></i>
+    </a>
+    <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" style="margin: 0 10px; color: #0077B5;">
+      <i class="fab fa-linkedin fa-lg"></i>
+    </a>
+  </div>
+  <p style="font-size: 14px; color: #555;">© 2025 Kamal Bohara. All rights reserved.</p>
+</footer>
   </footer>
 </body>
+
 </html>
