new educatin field is added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="nav-desktop">
       <div class="logo">
-        <a href="index.html">KAMAL BOHARA</a>
+        <a  href="index.html">KAMAL BOHARA</a>
       </div>
       <div class="desktop-list">
         <ul>
@@ -34,23 +34,42 @@
   <section class="intro">
     <div class="kamal">
       <div class="kamalphoto">
-        <img src="pg.jpg" alt="">
+        <img  src="pg.jpg" alt="">
       </div>
       <div class="aboutkamal">
           <p style="color: red;"><b>HI, I'm KAMAL BOHARA</b></p>
-        <marquee behavior="alternate" direction="left"><p style="color: blue;"><b>WEB_DEVELOPER</b></p></marquee>
-       <marquee behavior="alternate" direction="right"> <p><b>TECH-ENTHUSIAST</b></p></marquee>
-
+        <marquee behavior="" direction="left"><p style="color: blue;"><b>WEB_DEVELOPER</b></p></marquee>
+       <marquee behavior="" direction="right"> <p><b>TECH-ENTHUSIAST</b></p></marquee>
+        <button class="submit">
+         <a class="submitwala" href="about.html"> ABOUT ME</a>
+        </button>
       </div>
+      
     </div>
 </section>
-<section class="language">
-  <div class="learned-lan">
-    <div class="lan-left">
-   left
+<section class="education">
+  <div class="edu">
+    <div class="edu-left">
+      <div class="experiecnce">
+        <h3 style="color: red; font-size: 1.5rem; margin-top: 7px;">EXPERIENCE</h3>
+        
+        <br><p>6+ months in Frontend development</p>
+        <li style="text-align: left;padding-left: 90px;">c</li>
+        <li style="text-align: left;padding-left: 90px">HTML</li>
+        <li style="text-align: left;padding-left: 90px">CSS</li>
+        <li style="text-align: left;padding-left: 90px">JAVASCRIPT</li>
+        <li style="text-align: left;padding-left: 90px">MYSQL</li>
+      </div>
+   
     </div>
-    <div class="lan-right">
-right 
+    <div class="edu-right">
+      <div class="high-eductaion">
+        <H3 style="color: red; font-size: 1.5rem; margin-top: 7px;">EDUCATION</H3>
+        <br><ul>SEE: 3.65/4 CGPA</ul>
+        <ul style="margin-top: 3px;">Grade 11: 3.6/4 CGPA</ul>
+
+      </div>
+
 
     </div>
 
