--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
   </div>
 
 </section>
-<section class="next">
+<section class="project">
+  <h2 style="padding-top: 30px; text-align: center;"><b>PROJECTS</b></h2>
+  <div class="project1">
+    hello hello hello
+
+  </div>
 
 </section>
   </main>
@@ -84,7 +89,7 @@
   <footer>
   
        <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
-  <div style="margin-bottom: 10px;">
+  <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 60px;">
     <a href="https://facebook.com" target="_blank" style="margin: 0 10px; color: #4267B2;">
       <i class="fab fa-facebook fa-lg"></i>
     </a>
@@ -95,7 +100,7 @@
       <i class="fab fa-linkedin fa-lg"></i>
     </a>
   </div>
-  <p style="font-size: 14px; color: #555;">© 2025 Kamal Bohara. All rights reserved.</p>
+  <p style="font-size: 14px;color: #555;padding-top: 10px;">© 2025 Kamal Bohara. All rights reserved.</p>
 </footer>
   </footer>
 </body>
