--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
   <script src="java.js" defer></script>
+  <link rel="stylesheet" href="mediaquery.css">
 </head>
 
 <body>
