new alternate direction are added

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
       <div class="aboutkamal">
           <p style="color: red;"><b>HI, I'm KAMAL BOHARA</b></p>
-        <marquee behavior="" direction="left"><p style="color: blue;"><b>WEB_DEVELOPER</b></p></marquee>
-       <marquee behavior="" direction="right"> <p><b>TECH-ENTHUSIAST</b></p></marquee>
+        <marquee behavior="alternate" direction="left"><p style="color: blue;"><b>WEB_DEVELOPER</b></p></marquee>
+       <marquee behavior="" direction="left"> <p><b>TECH-ENTHUSIAST</b></p></marquee>
         <button class="submit">
          <a class="submitwala" href="about.html"> ABOUT ME</a>
         </button>
