new file project is added and some minor bugs are solved .

--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,14 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
   <script src="java.js" defer></script>
+  <link rel="stylesheet" href="mediaquery.css">
 </head>
 
 <body>
 
 
   <header>
-    <nav class="nav-desktop">
+    <nav class="nav-desktop" style="margin-top: -6px;">
       <div class="logo">
         <a  href="index.html">KAMAL BOHARA</a>
       </div>
@@ -31,7 +32,11 @@
   </header>
 
 <main>
-  
+ <section class="aboutwala">
+  <div>
+
+  </div>
+ </section>
   </main>
 
   <footer>
