new about section

--- a/about.html
+++ b/about.html
@@ -32,11 +32,45 @@
   </header>
 
 <main>
- <section class="aboutwala">
-  <div>
+ <section class="mero" >
+  <div style="padding-top: 5%;">
+    <center><h1><b>ABOUT</b></h1></center>
+    <center><hr style="width: 20%; height: 3px; background-color: #555;"></center>
+  </div>
+   
+  <div class="aboutwala">
+   
+     
+    <div class="left-about">
+    <img src="pg.jpg" alt="" style="height: 300px;margin-left: 259px;">
+
+  </div>
+  <div class="right-about">
+    <b><p>I am a passionate learner from Malakheti, Kailali, currently pursuing
+      Computer Engineering. Since childhood, I have been deeply curious about how
+      technology shapes the world, which has inspired me to explore programming,
+      digital systems, and modern innovations. My future goal is to take part in
+      research internships abroad and contribute to fields like artificial intelligence,
+      holography,and advanced technologies.I also aim to create opportunities in Nepal
+      through entrepreneurial projects while continuing my journey in research and development.
+
+     <br><br> – Kamal Bohara </p></b>
+  </div>
+
+
+  </div>
+ <center><hr style="width: 20%; height: 3px; background-color: #555;"></center> 
+  
+ </section>
+ <section>
+  <div class="Team">
+    <center><h1>TEAM</h1></center>
+    <center><hr style="width: 20%; height: 3px; background-color: #555;"></center> 
+    
 
   </div>
  </section>
+ 
   </main>
 
   <footer>
