--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section class="intro">
       
-    <center> "><h1><p style="color: rgb(64, 111, 197); padding-top: 20px;margin-left: -190px;"><b>WELL-COME TO MY SPACE </b></p></h1> <hr style="height: 3px; width:45%;margin-left: -155px;background-color: black;"></center> 
+    <center> ><h1><p style="color: rgb(64, 111, 197); padding-top: 20px;margin-left: -190px;"><b>WELL-COME TO MY SPACE </b></p></h1> <hr style="height: 3px; width:45%;margin-left: -155px;background-color: black;"></center> 
       <div class="kamal">
         <div class="kamalphoto">
           <img src="pg.jpg" alt="">
