--- a/about.html
+++ b/about.html
@@ -46,13 +46,12 @@
 
   </div>
   <div class="right-about">
-    <b><p>I am a passionate learner from Malakheti, Kailali, currently pursuing
-      Computer Engineering. Since childhood, I have been deeply curious about how
-      technology shapes the world, which has inspired me to explore programming,
-      digital systems, and modern innovations. My future goal is to take part in
-      research internships abroad and contribute to fields like artificial intelligence,
-      holography,and advanced technologies.I also aim to create opportunities in Nepal
-      through entrepreneurial projects while continuing my journey in research and development.
+    <b><p>I am a passionate learner from Malakheti, Kailali, currently pursuing Computer Engineering. Since
+          childhood, I have been deeply curious about how technology shapes the world, which has inspired me to
+          explore programming, digital systems, and modern innovations. My future goal is to take part in research
+          internships abroad and contribute to fields like artificial intelligence, holography,and advanced
+          technologies.I also aim to create opportunities in Nepal through entrepreneurial projects while continuing
+          my journey in research and development.
 
      <br><br> – Kamal Bohara </p></b>
   </div>
@@ -78,7 +77,7 @@
   
        <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
   <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 60px;">
-    <a href="https://facebook.com" target="_blank" style="margin: 0 10px; color: #4267B2;">
+    <a href="https://facebook.com" target="https://www.facebook.com/kamal.bohara.573128" style="margin: 0 10px; color: #4267B2;">
       <i class="fab fa-facebook fa-lg"></i>
     </a>
     <a href="https://github.com/Kamal857" target="_blank" style="margin: 0 10px; color: #333;">
