--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
   
        <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
   <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 60px;">
-    <a href="https://facebook.com" target="_blank" style="margin: 0 10px; color: #4267B2;">
+    <a href="https://facebook.com" target="https://www.facebook.com/kamal.bohara.573128" style="margin: 0 10px; color: #4267B2;">
       <i class="fab fa-facebook fa-lg"></i>
     </a>
     <a href="https://github.com/Kamal857" target="_blank" style="margin: 0 10px; color: #333;">
