--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p style="color: red; padding-bottom: 4px;"><b>HI, I'm KAMAL BOHARA</b></p>
           <p style="color: blue; padding-bottom: 5px;"><b>WEB_DEVELOPER</b></p>
           
-          <p style="padding-bottom: 3px;"><b>TECH-ENTHUSIAST</b></p>
+          <p style="padding-bottom: 3px;"><b>TECH-ENTHUSIAST💻🔥</b></p>
           
           <button class="submit">
             <a class="submitwala" href="about.html"> ABOUT ME</a>
