--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <section class="footer">
        <footer>
 
-    <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
-      <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 60px;">
+    <footer style="background-color: rgb(182, 220, 224); ; text-align: center;">
+      <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 18px;">
         <a href="https://facebook.com" target="https://www.facebook.com/kamal.bohara.573128" style="margin: 0 10px; color: #4267B2;">
           <i class="fab fa-facebook fa-lg"></i>
         </a>
-        <a href="https://github.com/Kamal857" target="_blank" style="margin: 0 10px; color: #333;">
+        <a href="https://github.com/Kamal857" target="" style="margin: 0 10px; color: #333;">
           <i class="fab fa-github fa-lg"></i>
         </a>
         <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank"
