about section is completed

--- a/about.html
+++ b/about.html
@@ -28,7 +28,34 @@
 
     </section>
 
-    <section class="main">
+    <section class="main"> <center><hr>
+      <H1></H1><B>ABOUT ME</B></H1><hr></center>
+      <div class="default-about">
+        <div class="about1">
+          <img src="kamal.jpg" alt="">
+
+
+        </div>
+        <div class="about2">
+          <p>
+            I’m Kamal Bohara, a passionate and forward-thinking Computer Engineering student from Nepal.
+            I’m driven by curiosity and a strong desire to understand how technology can solve real-world
+            problems and make life easier.
+
+            I enjoy exploring areas such as software development, research, and emerging technologies that
+            shape the future of innovation. My journey in computer science started from curiosity and has
+            evolved into a commitment to build meaningful, creative, and efficient solutions. <br>
+
+            Currently, I’m involved in projects that blend engineering, creativity, and problem-solving, from
+            designing simple web applications to experimenting with futuristic concepts. I love learning new 
+            tools, collaborating with like-minded people, and constantly improving my technical and creative
+            skills. <br>
+
+            Beyond coding, I enjoy reading, discovering new ideas, and brainstorming innovative ways to 
+            contribute to the digital world.
+          </p>
+        </div>
+      </div>
         
         </section>
 
