about page is updated

--- a/about.html
+++ b/about.html
@@ -40,10 +40,12 @@
           <p>
             I’m Kamal Bohara, a passionate and forward-thinking Computer Engineering student from Nepal.
             I’m driven by curiosity and a strong desire to understand how technology can solve real-world
-            problems and make life easier.
+            problems and make life easier. <br>
 
-            I enjoy exploring areas such as software development, research, and emerging technologies that
-            shape the future of innovation. My journey in computer science started from curiosity and has
+            I enjoy exploring areas such as software development, research, and emerging techn-
+            ologies that
+            shape the future of innovation. My journey in computer science started 
+          from curiosity and has
             evolved into a commitment to build meaningful, creative, and efficient solutions. <br>
 
             Currently, I’m involved in projects that blend engineering, creativity, and problem-solving, from
