hr line is updated

--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
 
     </section>
 
-    <section class="main"> <center><hr>
-      <H1></H1><B>ABOUT ME</B></H1><hr></center>
+    <section class="main"> <center><hr class="hrabout">
+      <H1></H1><B>ABOUT ME</B></H1><hr class="hrabout"></center>
       <div class="default-about">
         <div class="about1">
           <img src="kamal.jpg" alt="">
