--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
         <div class="about2">
           <p>
-            I’m Kamal Bohara, a passionate and forward-thinking Computer Engineering student from Nepal.
+            I’m <b>Kamal Bohara</b>, a passionate and forward-thinking Computer Engineering student from Nepal.
             I’m driven by curiosity and a strong desire to understand how technology can solve real-world
             problems and make life easier. <br>
 
@@ -54,7 +54,11 @@
             skills. <br>
 
             Beyond coding, I enjoy reading, discovering new ideas, and brainstorming innovative ways to 
-            contribute to the digital world.
+            contribute to the digital world. <br>
+
+             <b>Kamal Bohara</b><br>
+              Email:<a href="mailto:boharakamal857@gmail.com">Email Me</a>
+
           </p>
         </div>
       </div>
