research page is just made

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <div class="nav-list">
                 <ul>
                     <li><a href="index.html"><b>HOME</b></a></li>
-                    <li><a href="#"><b>RESAERCH</b></a></li>
+                    <li><a href="research.html"><b>RESEARCH</b></a></li>
                     <li><a href="#"><b>PROJECTS</b></a></li>
                     <li><a href="#"><b>CONTACT</b></a></li>
                     <li><a href="about.html"><b>ABOUT</b></a></li>
@@ -83,27 +83,20 @@
 
 
     </section>
-    <section class="footer">
-       <footer>
-
-    <footer style="background-color: rgb(138, 180, 185) ; text-align: center;">
-      <div style="margin-bottom: 10px;margin-top: 41px;padding-top: 60px;">
-        <a href="https://facebook.com" target="https://www.facebook.com/kamal.bohara.573128" style="margin: 0 10px; color: #4267B2;">
-          <i class="fab fa-facebook fa-lg"></i>
-        </a>
-        <a href="https://github.com/Kamal857" target="_blank" style="margin: 0 10px; color: #333;">
-          <i class="fab fa-github fa-lg"></i>
-        </a>
-        <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank"
-          style="margin: 0 10px; color: #0077B5;">
-          <i class="fab fa-linkedin fa-lg"></i>
-        </a>
-      </div>
-      <p style="font-size: 14px;color: #555;padding-top: 10px;">© 2025 Kamal Bohara. All rights reserved.</p>
-    </footer>
-  </footer>
-
-    </section>
+   <footer class="footer">
+  <div class="social-links">
+    <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
+      <i class="fab fa-facebook fa-lg"></i>
+    </a>
+    <a href="https://github.com/Kamal857" target="_blank" class="github">
+      <i class="fab fa-github fa-lg"></i>
+    </a>
+    <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" class="linkedin">
+      <i class="fab fa-linkedin fa-lg"></i>
+    </a>
+  </div>
+  <p>© 2025 Kamal Bohara. All rights reserved.</p>
+</footer>
     
 </body>
 </html>
