--- a/research.html
+++ b/research.html
@@ -44,46 +44,18 @@
     </nav>
 
   </section>
-
-  <section class="main">
-    <p>
-      <center><b>
-          <h1>WELCOME TO MY SPACE</h3>
-        </b></center>
-      <center>
-        <Hr width="30%">
-      </center>
-    </p>
-    <section class="default1">
-      <div class="myphotoleft">
-        <img src="pg.jpg" alt="">
-      </div>
-      <div class="right">
-        <b style="color: red;padding-bottom: 5px;">
-          <h2>Hi, I'm KAMAL BOHARA</h2>
-        </b>
-        <b style="color: rgb(0, 17, 255);padding: 2px 0px;">
-          <h2>TECH-ENTHUSIAST</h2>
-        </b>
-        <b style="color: rgb(121, 27, 27);padding-top: 5px;">
-          <h2>WEB-DEVELOPER</h2>
-        </b>
-        <button><a href="about.html">About Me</a></button><br>
-        <button><a href="">Download CV</a></button>
-      </div>
-    </section>
-    <section class="default2">
-      <div class="custom-shape-divider-bottom-1761311174">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-        <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
-    </svg>
-</div>
-
+<section class="main">
+    <div class="research">
+        <center><h4><b>RESEARCH BLOGS</b></h4></center>
+    </div>
+    <section class="research-container">
+        <div class="blogs">
+            
+        </div>
 
     </section>
-
-
-  </section>
+</section>
+  
   <footer class="footer">
   <div class="social-links">
     <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
