--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h2>WEB-DEVELOPER</h2>
         </b>
         <button><a href="about.html">About Me</a></button><br>
-        <button><a href="">Download CV</a></button>
+        <button><a href="hello">Download CV</a></button>
       </div>
     </section>
 
