--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
 
 
       </div>
-      <!-- Mobile navigation (hidden on desktop) -->
+     <!-- Top-right toggleable sidebar -->
       <div class="mobile">
-        <div class="navlist-mobile">
-          <i class="ri-menu-line"></i>
-        </div>
-      </div>
+        <div id="sidebar" class="sidebar">
+  <ul class="sidebar-menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="project.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="research.html">Research</a></li>
 
+  </ul>
+</div>
+
+<!-- Menu icon -->
+<i id="menu-icon" class="ri-menu-fill" style="font-size:30px; cursor:pointer; position:fixed; top:10px; right:10px; z-index:1100;"></i>
+
+
+      </div>
 
 
 
