--- a/research.html
+++ b/research.html
@@ -30,11 +30,24 @@
 
 
       </div>
-      <!-- Mobile navigation (hidden on desktop) -->
+      <!-- Top-right toggleable sidebar -->
       <div class="mobile">
-        <div class="navlist-mobile">
-          <i class="ri-menu-line"></i>
+        <div id="sidebar" class="sidebar">
+          <ul class="sidebar-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="research.html">Research</a></li>
+
+          </ul>
         </div>
+
+        <!-- Menu icon -->
+        <i id="menu-icon" class="ri-menu-fill"
+          style="font-size:30px; cursor:pointer; position:fixed; top:10px; right:10px; z-index:1100;"></i>
+
+
       </div>
 
 
@@ -44,32 +57,34 @@
     </nav>
 
   </section>
-<section class="main">
+  <section class="main">
     <div class="research">
-        <center><h4><b>RESEARCH BLOGS</b></h4></center>
+      <center>
+        <h4><b>RESEARCH BLOGS</b></h4>
+      </center>
     </div>
     <section class="research-container">
-        <div class="blogs">
-            
-        </div>
+      <div class="blogs">
+
+      </div>
 
     </section>
-</section>
-  
+  </section>
+
   <footer class="footer">
-  <div class="social-links">
-    <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
-      <i class="fab fa-facebook fa-lg"></i>
-    </a>
-    <a href="https://github.com/Kamal857" target="_blank" class="github">
-      <i class="fab fa-github fa-lg"></i>
-    </a>
-    <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" class="linkedin">
-      <i class="fab fa-linkedin fa-lg"></i>
-    </a>
-  </div>
-  <p>© 2025 Kamal Bohara. All rights reserved.</p>
-</footer>
+    <div class="social-links">
+      <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
+        <i class="fab fa-facebook fa-lg"></i>
+      </a>
+      <a href="https://github.com/Kamal857" target="_blank" class="github">
+        <i class="fab fa-github fa-lg"></i>
+      </a>
+      <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" class="linkedin">
+        <i class="fab fa-linkedin fa-lg"></i>
+      </a>
+    </div>
+    <p>© 2025 Kamal Bohara. All rights reserved.</p>
+  </footer>
 
   <script src="java.js"></script>
 
