--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>WEB-DEVELOPER</h2>
         </b>
         <button><a href="about.html">About Me</a></button><br>
-        <button><a href="hello">Download CV</a></button>
+        <button><a href="https://drive.google.com/file/d/1M1e7nNCJDvMgp8N6n_iEUuwJbKwRuNz9/view?usp=sharing">Download CV</a></button>
       </div>
     </section>
 
