--- a/about.html
+++ b/about.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KAMAL-PORTFOLIO</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -16,56 +18,52 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <a href="index.html"><img src="logo.png" alt="logo" srcset=""></a>
-
+        <a href="index.html"><img src="logo.png" alt="Kamal Portfolio Logo"></a>
       </div>
       <div class="nav-list">
         <ul>
           <li><a href="index.html"><b>HOME</b></a></li>
           <li><a href="research.html"><b>RESEARCH</b></a></li>
           <li><a href="#"><b>PROJECTS</b></a></li>
-          <li><a href="#"><b>CONTACT</b></a></li>
+          <li><a href="contact.html"><b>CONTACT</b></a></li>
           <li><a href="about.html"><b>ABOUT</b></a></li>
 
         </ul>
 
 
       </div>
-      <!-- Top-right toggleable sidebar -->
       <div class="mobile">
-        <div id="sidebar" class="sidebar">
-          <ul class="sidebar-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="project.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="research.html">Research</a></li>
-
-          </ul>
-        </div>
-
-        <!-- Menu icon -->
-        <i id="menu-icon" class="ri-menu-fill"
-          style="font-size:30px; cursor:pointer; position:fixed; top:10px; right:10px; z-index:1100;"></i>
-
-
+        <i id="menu-icon" class="ri-menu-fill"></i>
       </div>
-
-
-
-
-
-
     </nav>
+  </section>
+
+  <!-- Top-right toggleable sidebar -->
+  <div id="sidebar" class="sidebar">
+    <ul class="sidebar-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="research.html">Research</a></li>
+    </ul>
+  </div>
+
+
+
+
+
+
+  </nav>
 
   </section>
 
   <section class="main">
-    <center>
-      <hr class="hrabout">
-      <H1></H1><B>ABOUT ME</B></H1>
-      <hr class="hrabout">
-    </center>
+    <div class="hero-welcome">
+      <hr class="accent-hr">
+      <h1>ABOUT ME</h1>
+      <hr class="accent-hr">
+    </div>
     <div class="default-about">
       <div class="about1">
         <img src="kamal.jpg" alt="">
@@ -102,7 +100,6 @@
   </section>
 
 
-  </section>
   <footer class="footer">
     <div class="social-links">
       <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
