--- a/research.html
+++ b/research.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KAMAL-PORTFOLIO</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -15,53 +18,51 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <a href="index.html"><img src="logo.png" alt="logo" srcset=""></a>
-
+        <a href="index.html"><img src="logo.png" alt="Kamal Portfolio Logo"></a>
       </div>
       <div class="nav-list">
         <ul>
           <li><a href="index.html"><b>HOME</b></a></li>
           <li><a href="research.html"><b>RESEARCH</b></a></li>
           <li><a href="#"><b>PROJECTS</b></a></li>
-          <li><a href="#"><b>CONTACT</b></a></li>
+          <li><a href="contact.html"><b>CONTACT</b></a></li>
           <li><a href="about.html"><b>ABOUT</b></a></li>
 
         </ul>
 
 
       </div>
-      <!-- Top-right toggleable sidebar -->
       <div class="mobile">
-        <div id="sidebar" class="sidebar">
-          <ul class="sidebar-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="project.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="research.html">Research</a></li>
-
-          </ul>
-        </div>
-
-        <!-- Menu icon -->
-        <i id="menu-icon" class="ri-menu-fill"
-          style="font-size:30px; cursor:pointer; position:fixed; top:10px; right:10px; z-index:1100;"></i>
-
-
+        <i id="menu-icon" class="ri-menu-fill"></i>
       </div>
-
-
-
-
-
     </nav>
+  </section>
+
+  <!-- Top-right toggleable sidebar -->
+  <div id="sidebar" class="sidebar">
+    <ul class="sidebar-menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="research.html">Research</a></li>
+    </ul>
+  </div>
+
+
+
+
+
+  </nav>
 
   </section>
   <section class="main">
     <div class="research">
-      <center>
-        <h4><b>RESEARCH BLOGS</b></h4>
-      </center>
+      <div class="hero-welcome">
+        <hr class="accent-hr">
+        <h1>RESEARCH BLOGS</h1>
+        <hr class="accent-hr">
+      </div>
     </div>
     <section class="research-container">
       <div class="blogs">
@@ -69,24 +70,23 @@
       </div>
 
     </section>
-  </section>
 
-  <footer class="footer">
-    <div class="social-links">
-      <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
-        <i class="fab fa-facebook fa-lg"></i>
-      </a>
-      <a href="https://github.com/Kamal857" target="_blank" class="github">
-        <i class="fab fa-github fa-lg"></i>
-      </a>
-      <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" class="linkedin">
-        <i class="fab fa-linkedin fa-lg"></i>
-      </a>
-    </div>
-    <p>© 2025 Kamal Bohara. All rights reserved.</p>
-  </footer>
+    <footer class="footer">
+      <div class="social-links">
+        <a href="https://www.facebook.com/kamal.bohara.573128" target="_blank" class="facebook">
+          <i class="fab fa-facebook fa-lg"></i>
+        </a>
+        <a href="https://github.com/Kamal857" target="_blank" class="github">
+          <i class="fab fa-github fa-lg"></i>
+        </a>
+        <a href="https://linkedin.com/in/kamal-bohara-a00629331" target="_blank" class="linkedin">
+          <i class="fab fa-linkedin fa-lg"></i>
+        </a>
+      </div>
+      <p>© 2025 Kamal Bohara. All rights reserved.</p>
+    </footer>
 
-  <script src="java.js"></script>
+    <script src="java.js"></script>
 
 </body>
 
