--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
 
 
-  <!-- Sidebar and main content follow -->
-
-  <!-- Hero Section -->
-  <section class="main hero-section">
+  <div class="hero-welcome">
+    <h1>WELCOME TO MY SPACE</h1>
+    <hr class="accent-hr">
+  </div>
+  <section class="default1">
     <div class="hero-content">
       <div class="hero-text">
         <span class="hero-greeting">Hi, I'm</span>
